--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "local-weather-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 5000",
+    "start": "ng serve --port 5000 --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "predocker:build": "npm run build -- --prod --output-path dist && npm test -- --watch=false && npm run e2e",
+    "docker:build": "cross-conf-env docker image build . -t npm_package_config_imageRepo:npm_package_version",
+    "docker:tag": " cross-conf-env docker image tag npm_package_config_imageRepo:npm_package_version npm_package_config_imageRepo:latest",
+    "docker:clean": "cross-conf-env docker rm -f npm_package_config_imageName",
+    "docker:run": "run-s -c docker:clean docker:runHelper",
+    "docker:runHelper": "cross-conf-env docker run -e NODE_ENV=local --name npm_package_config_imageName -d -p npm_package_config_imagePort:3000 npm_package_config_imageRepo",
+    "docker:publish": "cross-conf-env docker image push $npm_package_config_imageRepo:$npm_package_version",
+    "postdocker:publish": "cross-conf-env docker image push $npm_package_config_imageRepo:latest",
+    "docker:open:win": "echo Trying to launch on Windows && timeout 2 && start http://localhost:%npm_package_config_imagePort%"
   },
   "private": true,
   "dependencies": {
@@ -25,15 +34,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "cross-conf-env": "^1.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -41,8 +50,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.3",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
+  },
+  "config": {
+    "imageRepo": "shayim/local-weather-app",
+    "imageName:": "local-weather-app",
+    "imagePort": "5000"
   }
 }
