--- a/angular.json
+++ b/angular.json
@@ -22,9 +22,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [{
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
+            "styles": [
+              "src/localcast-theme.sass",
               "src/styles.css"
             ],
             "scripts": []
